[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day-1"
path = "src/day1.rs"
[[bin]]
name = "day-2"
path = "src/day2.rs"
[[bin]]
name = "day-3"
path = "src/day3.rs"

[dependencies]
regex = "1.10.2"
